# speech-to-text

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: BUILD_INSTRUCTIONS.md  DEPLOYMENT.md  EXAMPLES.md  INSTALLATION.md  INSTALLATION_GUIDE.md  TROUBLESHOOTING.md
examples/: main_app_demo.py  simple_usage.py
scripts/: build_dist.sh  build_standalone.py  cli_wrapper.py  install.sh  setup_env.sh
src/: __init__.py
src/speech_to_text/: __init__.py  audio_processor.py  cli.py  config.py  error_handler.py  exceptions.py  file_manager.py  logger.py  main_app.py  models.py  py.typed  text_exporter.py  transcriber.py
tauri-svelte5-app/: .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  SECURITY.md  build.config.js  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
tauri-svelte5-app/.github/workflows/: build-and-release.yml  test.yml
tauri-svelte5-app/docs/: API.md  ARCHITECTURE.md  BUILDING.md  FAQ.md  FEATURES.md  INSTALLATION.md  QUICK_START.md  TROUBLESHOOTING.md  USER_GUIDE.md
tauri-svelte5-app/docs/testing/: accessibility-testing-guide.md  manual-test-scenarios.md  performance-testing-guide.md  user-acceptance-testing-guide.md
tauri-svelte5-app/scripts/: create-release.cjs  generate-build-info.cjs  setup-signing.sh  validate-build.cjs
tauri-svelte5-app/src/: App.css  App.svelte  build-info.ts  main.ts
tauri-svelte5-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri-svelte5-app/src-tauri/.cargo/: config.toml
tauri-svelte5-app/src-tauri/capabilities/: default.json
tauri-svelte5-app/src-tauri/src/: cli.rs  error.rs  lib.rs  macos_integration.rs  main.rs  models.rs  settings.rs  system.rs  updater.rs  utils.rs
tauri-svelte5-app/src-tauri/tests/: comprehensive_integration_tests.rs  integration_tests.rs  macos_integration_tests.rs  progress_monitoring_tests.rs  system_integration_tests.rs
tauri-svelte5-app/src/components/diagnostics/: index.ts
tauri-svelte5-app/src/components/error/: index.ts
tauri-svelte5-app/src/components/icons/: Icon.svelte
tauri-svelte5-app/src/components/processing/: ProcessingLog.svelte  StageIndicator.svelte  TimeEstimation.svelte  index.ts
tauri-svelte5-app/src/components/ui/: Button.svelte  ProgressBar.svelte  index.ts
tauri-svelte5-app/src/components/views/: BatchView.svelte  ProcessingView.svelte  ResultsView.svelte  UploadView.svelte
tauri-svelte5-app/src/services/: batchWorkflowService.ts  fileService.ts  historyService.ts  index.ts  macosIntegrationService.ts  processingService.ts  profilesService.ts  queueManager.ts  tauriService.ts  workerService.ts  workflowService.ts
tauri-svelte5-app/src/store/: runeStore.svelte.ts  svelteStore.ts
tauri-svelte5-app/src/styles/: accessibility.css
tauri-svelte5-app/src/test/: setup.ts
tauri-svelte5-app/src/tests/: advancedFeatures.test.ts  services.test.ts  simpleIntegration.test.ts
tauri-svelte5-app/src/types/: index.ts
tauri-svelte5-app/src/utils/: exportManager.ts  memoryManager.ts  performanceMonitor.ts
tauri-svelte5-app/src/workers/: processingWorker.ts
tests/: benchmark_performance.py  test_audio_processor.py  test_batch_workflow_integration.py  test_cli.py  test_cli_advanced.py  test_comprehensive.py  test_data_generator.py  test_end_to_end.py  test_error_handler.py  test_exceptions.py  test_file_manager.py  test_logger.py  test_main_app_integration.py  test_models.py  test_performance.py  test_text_exporter.py  test_transcriber.py
