[package]
name = "tauri-gui-app"
version = "0.1.0"
description = "Speech to Text Desktop Application built with Tauri, Svelte, and Rust"
authors = ["yang-gyunam"]
license = "Apache-2.0"
repository = "https://github.com/yang-gyunam/speech-to-text"
keywords = ["speech-to-text", "transcription", "whisper", "tauri", "desktop"]
categories = ["multimedia", "gui", "command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_gui_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
once_cell = "1.19"
base64 = "0.21"
log = "0.4"
regex = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[dev-dependencies]
tempfile = "3.0"

